# zeusmind

./: .gitignore  pyproject.toml
dataset/: lm_dataset.py
model/: ZeusMind.py  model.py
trainer/: train_pretrain.py  train_tokenizer.py  trainer_utils.py
